<resources>
    <string name="app_name">SleepTunes</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation Menu -->
    <string name="menu_main">Main</string>
    <string name="menu_sleep">Sleep</string>
    <string name="menu_settings">Settings</string>

    <!-- Media Controls -->
    <string name="play_button_text">Play</string>
    <string name="pause_button_text">Pause</string>
    <string name="next_button_text">Next</string>
    <string name="previous_button_text">Prev</string>
    <string name="default_time_string">0:00</string>
    <string name="time_string">%1$s:%2$s</string>

    <!--Now Playing-->
    <string name="now_playing">Now Playing:</string>

    <!-- Sleep Timer-->
    <string name="sleep_timer_text">20:00</string>
    <string name="reset_sleep_timer_text">Reset Timer</string>

    <!-- Settings Strings -->
    <string name="media_settings_title">Media</string>
    <string name="media_source_key">media_source_key</string>
    <string name="media_source_title">Media Source</string>
    <string name="media_source_summary">Selects the source of the audio played</string>

    <string name="youtube_playlist_key">youtube_playlist</string>
    <string name="youtube_playlist_title">YouTube Playlist</string>
    <string name="youtube_playlist_summary">Modify the YouTube playlist</string>

    <string name="sleep_timer_settings_title">Sleep Timer</string>
    <string name="sleep_timer_time_key">sleep_timer_time_key</string>
    <string name="sleep_timer_time_title">Sleep Timer Duration</string>
    <string name="sleep_timer_time_summary">Sets the duration of the sleep timer</string>

    <string name="display_settings_title">Display</string>
    <string name="dark_mode_key">dark_mode_key</string>
    <string name="dark_mode_title">Night Mode (In Progress)</string>
    <string name="dark_mode_summary">Turns on a dark theme</string>

    <string name="audio_settings_title">Audio</string>
    <string name="volume_fade_key">volume_fade_key</string>
    <string name="volume_fade_title">Volume Fade</string>
    <string name="volume_fade_summary">Volume gradually decreases as sleep timer runs</string>

</resources>
