<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_main"
        android:orderInCategory="100"
        android:title="@string/menu_main"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/menu_sleep"
        android:orderInCategory="200"
        android:title="@string/menu_sleep"
        android:icon="@drawable/ic_sleep"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="300"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"/>
    <item
        android:id="@+id/menu_playlist"
        android:orderInCategory="400"
        android:title="@string/menu_playlist"
        android:icon="@drawable/ic_playlist"/>
</menu>