<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MediaPlayerFragment">

    <ToggleButton
        android:id="@+id/playButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="0dp"
        android:textOff="@string/play_button_text"
        android:textOn="@string/pause_button_text"
        android:textColor="@color/white_text"
        android:background="@drawable/solid_circle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/next_button_text"
        android:textColor="@color/white_text"
        android:background="@drawable/solid_circle"
        app:layout_constraintTop_toTopOf="@id/playButton"
        app:layout_constraintBottom_toBottomOf="@id/playButton"
        app:layout_constraintStart_toEndOf="@id/playButton" />

    <Button
        android:id="@+id/previousButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/solid_circle"
        android:gravity="center"
        android:text="@string/previous_button_text"
        android:textColor="@color/white_text"
        app:layout_constraintBottom_toBottomOf="@id/playButton"
        app:layout_constraintEnd_toStartOf="@id/playButton"
        app:layout_constraintTop_toTopOf="@id/playButton"/>

</android.support.constraint.ConstraintLayout>